--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
     "@google/genai": "^1.32.0",
     "@supabase/supabase-js": "^2.87.1",
     "react": "^19.2.1",
